# vmn

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  a.md  prep_env.sh  pyproject.toml  setup.py
.github/workflows/: build-and-upload-vmn.yml  ci.yml
.vmn/: .gitignore
.vmn/vmn/: last_known_app_version.yml
docs/: experiments.md  migrating-from-bump2version.md  migrating-from-standard-version.md  ui.md  vmn-vs-release-please.md  vmn-vs-semantic-release.md  vmn-vs-setuptools-scm.md
tests/: build_vmn_tester.sh  build_vmn_xenial_tester.sh  conftest.py  helpers.py  requirements.txt  run_pytest.sh  test_branch_conf.py  test_branch_tag.py  test_conf_migration.py  test_config.py  test_experiment.py  test_gen.py  test_goto.py  test_goto_detached_siblings.py  test_misc.py  test_multi_repo.py  test_override_compat.py  test_prerelease.py  test_push_credentials.py  test_release.py  test_release_stamp.py  test_requirements.txt  test_show.py  test_snapshot.py  test_stamp.py  test_ui_api.py  test_ui_changelog.py  test_ui_cli.py  test_ui_config.py  test_ui_index.py  test_ui_jobs.py  test_ui_tree.py  test_ver_stamp.py  test_version_backends.py  vmn_tester_ubuntu_dockerfile  vmn_tester_ubuntu_xenial_dockerfile
tests/retro_versions_checks/: build_previous_vmn_stamper.sh  previous_vmn_stamper_dockerfile  stamp_with_0.8.5rc2_vmn.sh
version_stamp/: release_stamp.py  stamp_utils.py  vmn.py
version_stamp/backends/: __init__.py  base.py  factory.py  git.py  git_branch.py  git_history.py  git_ops.py  git_tags.py  iterators.py  local_file.py
version_stamp/cli/: __init__.py  __main__.py  args.py  commands.py  config_gen.py  config_tui.py  constants.py  entry.py  experiment.py  output.py  snapshot.py
version_stamp/core/: __init__.py  changelog.py  (+5 more)
webui/: index.html  package-lock.json  package.json  vite.config.ts
(+65 files in other folders)
