[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vmn"
dynamic = ["version"]
description = "Automatic version management solution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Pavel Rogovoy", email = "pavelr@final.israel"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "filelock>=3.2.0",
    "GitPython>=3.1.18",
    "packaging>=21.0",
    "PyYAML>=5.4.1",
    "tomlkit>0.7.2",
    "Jinja2>=3.0.3",
    "git-cliff>=2.5.0; python_version >= '3.8'",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-html",
    "pytest-xdist",
    "coverage",
    "wheel",
    "twine",
    "toml",
    "ruff",
    "mypy",
]

[project.scripts]
vmn = "version_stamp.vmn:main"

[project.urls]
Homepage = "https://github.com/final-israel/vmn"
Repository = "https://github.com/final-israel/vmn"

[tool.setuptools.dynamic]
version = {attr = "version_stamp.version.version"}

[tool.setuptools.packages.find]
include = ["version_stamp*"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E402",  # module level import not at top of file
    "E722",  # bare except (existing code pattern)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
